# piblin-jax

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CI_CD_SETUP.md  CI_SETUP_GUIDE.md  CLAUDE.md  CODE_QUALITY_ANALYSIS.md  CONTRIBUTING.md  COVERAGE_PLAN.md  CRITICAL_OPTIMIZATIONS_COMPLETED.md  Dockerfile  MULTI_AGENT_OPTIMIZATION_REPORT.md  Makefile  README.md  SETUP_CICD.md  VALIDATION_REPORT.md  coverage.json  docker-compose.yml  environment-gpu.yml  pre-rename-commits.txt  pyproject.toml  pytest.ini
.github/: CI_CD_SETUP.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  RELEASE.md  dependabot.yml
.github/fix-commit-errors/: final-summary.md  fix-report-110c299.md  fix-report-25a0362.md  fix-report-3cd34a3.md  fix-report-43f5e3a.md  fix-report-e0bddec.md  knowledge-base.json  validation-report-jax-platform.md
.github/fix-commit-errors/knowledge/: patterns.json
.github/fix-commit-errors/reports/: run-18669623124-fix-report.md
.github/hooks/: check_print_statements.py  check_test_markers.py
.github/scripts/: validate-setup.sh
.github/workflows/: README.md  ci.yml  ci.yml.disabled  docs.yml  docs.yml.disabled  publish.yml  release.yml  security.yml  tests.yml
docs/: DOCUMENTATION_ANALYSIS.md  Makefile  USER_GUIDE.md
docs/architecture/: ADR-001-backend-abstraction.md  ADR-002-immutable-datasets.md  ADR-003-transform-hierarchy.md  ADR-004-metadata-separation.md  ADR-005-numpy-api-boundary.md  README.md
docs/implementation/: 13-rheological-models.md
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst
docs/source/api/: backend.rst  bayesian.rst  data.rst  dataio.rst  fitting.rst  index.rst  transform.rst
docs/source/tutorials/: advanced_pipelines.rst  basic_workflow.rst  custom_transforms.rst  gpu_acceleration.rst  index.rst  rheological_models.rst  uncertainty_quantification.rst
docs/source/user_guide/: concepts.rst  installation.rst  migration.rst  performance.rst  quickstart.rst  uncertainty.rst
examples/: README.md  basic_usage_example.py  bayesian_parameter_estimation.py  bayesian_rheological_models.py  custom_transforms_example.py  gpu_acceleration_example.py  piblin_migration_example.py  transform_pipeline_example.py  uncertainty_propagation_example.py
examples/data/: sample_timeseries.csv  sample_viscosity.csv
piblin_jax/backend/: __init__.py
piblin_jax/bayesian/: base.py
piblin_jax/data/: __init__.py  roi.py
piblin_jax/data/collections/: consistent_measurement_set.py  experiment.py  experiment_set.py  measurement.py  measurement_set.py  tabular_measurement_set.py  tidy_measurement_set.py
piblin_jax/data/datasets/: base.py
piblin_jax/dataio/: __init__.py
piblin_jax/dataio/writers/: __init__.py
piblin_jax/fitting/: __init__.py
piblin_jax/transform/: base.py  lambda_transform.py
piblin_jax/transform/region/: __init__.py
quantiq/: __init__.py
quantiq/backend/: __init__.py  operations.py
quantiq/bayesian/: __init__.py  base.py
quantiq/bayesian/models/: __init__.py  arrhenius.py  carreau_yasuda.py  cross.py  power_law.py
quantiq/data/: __init__.py  metadata.py  roi.py
quantiq/data/collections/: __init__.py  consistent_measurement_set.py  experiment.py  experiment_set.py  measurement.py  measurement_set.py  tabular_measurement_set.py  tidy_measurement_set.py
quantiq/data/datasets/: __init__.py  base.py  composite.py  distribution.py  histogram.py  one_dimensional.py  three_dimensional.py  two_dimensional.py  zero_dimensional.py
quantiq/dataio/: __init__.py  hierarchy.py
quantiq/dataio/readers/: __init__.py  csv.py  txt.py
quantiq/fitting/: __init__.py  nlsq.py
quantiq/transform/: __init__.py  base.py  lambda_transform.py  pipeline.py
quantiq/transform/dataset/: __init__.py  baseline.py  calculus.py  interpolate.py  normalization.py  smoothing.py
quantiq/transform/measurement/: __init__.py  filter.py
quantiq/transform/region/: __init__.py
tests/: conftest.py  test_compatibility.py  test_gpu_acceleration_example.py  test_package.py  test_package_dependencies.py
tests/backend/: test_backend.py  test_conversions.py  test_operations.py  test_platform_detection.py
tests/bayesian/: test_bayesian_base_extended.py  test_numpyro_integration.py  test_prior_sampling.py  test_rheological_models.py  test_rheological_models_extended.py
tests/benchmarks/: test_performance.py
tests/data/: test_metadata.py  test_roi.py  test_visualization.py
tests/data/collections/: test_collections.py  test_collections_extended.py
tests/data/datasets/: test_datasets.py  test_one_dimensional_extended.py
tests/dataio/: test_csv_reader_mocked.py  test_file_io.py  test_hierarchy.py
tests/dataio/test_data/: multicol.csv  sample1.csv  sample2.csv  sample3.txt
tests/fitting/: test_nlsq.py  test_nlsq_mocked.py
tests/transform/: test_baseline_extended.py  test_calculus_extended.py  test_collection_transforms.py  test_dataset_transforms.py  test_lambda_transforms.py  test_normalization_extended.py  test_pipeline_extended.py  test_region.py  test_regions.py  test_transform_base.py  test_transform_base_extended.py  test_uncertainty_propagation.py
